# search

./: .gitignore  .gitmodules  pyproject.toml
services/analysis/clip/: extract.py  serve.py
services/analysis/clip2video/: config.py  extract.py  model.py  serve.py  utils.py
services/analysis/clipvip/: extract.py  serve.py
services/analysis/cluster/: extract.py
services/analysis/colors/: extract.py  visualize.py
services/analysis/dinov2/: extract.py  serve.py
services/analysis/mock/: serve.py
services/analysis/openclip/: extract.py  serve.py
services/analysis/openimages/: extract.py
services/analysis/yolo/: extract.py
services/common/: extractors.py  files.py  types.py  utils.py
services/core/: pom.xml
services/core/src/main/java/none/: Main.java
services/core/src/main/java/none/services/: Server.java
services/index/faiss/: build.py  serve.py
services/index/str-features/: encode.py  serve.py
services/index/str-objects/: encode.py
skel/: config.yaml  hypersets.csv  scenedetect.cfg
