[project]
name = "fast-search"
version = "0.1.0"
description = "None"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "h5py>=3.14.0",
    "more-itertools>=10.7.0",
    "open-clip-torch>=2.32.0",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "uvicorn>=0.35.0",
]
