[project]
name = "fast-search"
version = "0.1.0"
description = "None"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "easydict>=1.13",
    "fastapi>=0.115.14",
    "h5py>=3.14.0",
    "more-itertools>=10.7.0",
    "open-clip-torch>=2.32.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "tensorflow>=2.19.0",
    "tensorflow-hub>=0.16.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "uvicorn>=0.35.0",
]
